// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`démarre la partie 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
  "peutDemarrer": false,
  "phase": "EN_COURS",
  "scores": Array [],
  "vainqueurs": Array [],
}
`;

exports[`inscrit des joueurs 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
  "peutDemarrer": false,
  "phase": "INSCRIPTION",
  "scores": Array [],
  "vainqueurs": Array [],
}
`;

exports[`inscrit des joueurs 2`] = `
Object {
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "peutDemarrer": true,
  "phase": "INSCRIPTION",
  "scores": Array [],
  "vainqueurs": Array [],
}
`;

exports[`retourne le state initial 1`] = `
Object {
  "joueurs": Array [],
  "peutDemarrer": false,
  "phase": "INSCRIPTION",
  "scores": Array [],
  "vainqueurs": Array [],
}
`;
